--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -132,6 +132,7 @@
                             <option value="$">Dollar</option>
                             <option value="£">Pounds</option>
                             <option value="€">EUR</option>
+                            <option value="₹">Indian rupee</option>
                           </select>
                           <span class="text-danger" id="genderoutput"></span>
                         </div>
