--- a/views/admin/editUser.ejs
+++ b/views/admin/editUser.ejs
@@ -159,6 +159,7 @@
                                     <option value="$">Dollar</option>
                                     <option value="£">Pounds</option>
                                     <option value="€">EUR</option>
+                                    <option value="₹">Indian rupee</option>
                                 </select>
                             </div>
                             <div class="form-group has-success">
